# rust-wallet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md  SECURITY.md
.github/workflows/: ci.yml  index.jsx.txt  rust.md
crates/bip32/: Cargo.toml  README.md
crates/bip32/benches/: key_derivation.rs  serialization.rs
crates/bip32/examples/: key_derivation.rs  wallet_creation.rs  watch_only.rs
crates/bip32/src/: chain_code.rs  child_number.rs  derivation_path.rs  error.rs  extended_private_key.rs  extended_public_key.rs  lib.rs  network.rs  private_key.rs  public_key.rs  utils.rs
crates/bip32/tests/: test_vectors.rs
crates/bip39/: Cargo.toml  README.md
crates/bip39/benches/: benchmarks.rs
crates/bip39/src/: error.rs  language.rs  lib.rs  mnemonic.rs  utils.rs  word_count.rs
crates/bip39/tests/: integration_tests.rs
crates/bip44/: Cargo.toml
crates/bip44/src/: account.rs  error.rs  lib.rs  wallet.rs
crates/flutter_bridge/src/: bridge.rs  bridge_generated.rs
crates/khodpay-signing/src/: address.rs  lib.rs  rlp_encode.rs  signature.rs  signer.rs
crates/khodpay-signing/tests/: integration_tests.rs
docs/implementations/: bip32_tasks.md  bip44_tasks.md  signing_tasks.md
examples/: sample-project-Cargo.toml
